<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.bakenshake.bakenshake.NewOrderActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cust_name"
        android:textSize="30sp"
        android:hint="@string/hint_customer_name"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cust_number"
        android:inputType="phone"
        android:textSize="30sp"
        android:hint="@string/hint_customer_number"/>

        <DatePicker
            android:id="@+id/delivery_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal" />

        <TimePicker
            android:id="@+id/delivery_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"/>


    <CheckBox
        android:id="@+id/eggless"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/eggless"
        android:textSize="30sp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/flavour"
        android:hint="@string/hint_flavour"
        android:textSize="30sp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/weight"
        android:inputType="numberDecimal"
        android:hint="@string/hint_weight"
        android:textSize="30sp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cake_message"
        android:hint="@string/hint_message"
        android:textSize="30sp"/>

    <Button
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/place_order"
        android:text="@string/place_order"
        android:textSize="30sp"/>

    </LinearLayout>
</ScrollView>
