<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.bakenshake.bakenshake.HomeActivity">
    <item
        android:id="@+id/action_reports"
        android:orderInCategory="100"
        android:title="@string/action_reports"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_search"
        android:orderInCategory="100"
        android:title="@string/action_search"
        android:icon="@android:drawable/ic_menu_search"
        app:showAsAction="ifRoom"
        app:actionViewClass="android.support.v7.widget.SearchView" />
    <item
        android:id="@+id/action_synchronize"
        android:orderInCategory="100"
        android:title="@string/action_synchronize"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:title="@string/action_logout"
        app:showAsAction="never" />
</menu>
